[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-validator-mcp-server"
version = "0.1.0"
description = "Lighthouse for AI agents — test if APIs and services are properly accessible to AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "validator", "testing", "api", "accessibility", "ai-agents"]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0", "pydantic>=2.0.0"]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agent-validator-mcp-server"

[project.scripts]
agent-validator = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
